outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval6699671388250700792_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the inverse of the sum of distances to the current node and destination, and the heuristic adjusts exploration-exploitation by scaling pheromone influence with the square root of remaining nodes.}
                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the inverse of the sum of distances to the current node and destination, and the heuristic adjusts exploration-exploitation by scaling pheromone influence with the square root of remaining nodes.}
                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
